#pragma once
}

    };
        std::string m_shortDescription;
        std::string m_disease;
    private:

        const std::string &getShortDescription() const;
        const std::string &getDisease() const;

        VaccineType(const std::string &disease, const std::string &shortDescription);
    public:
    class VaccineType {

namespace Core::Domain::Model {

#include <string>


