@startuml
' US10-CD.puml
' Baseado na estrutura da imagem.png

title US10 - Class Diagram
hide circle

skinparam classAttributeIconSize 0
hide empty_methods

' Mapeado de xxxxView
class CreateVaccineTypeView {
}

' Mapeado de xxxxController
class CreateVaccineTypeController {
    +createVaccineType(string code, string desc): bool
}

' Mapeado de Class1
class DGSAdministrator {
    ' Atributos herdados...
    ---
    +specifyVaccineType(string code, string desc): VaccineType
}

' Mapeado de Class2
class VaccineType {
    -code: String
    -description: String
    +disease : String
    +shortDescription : String
    ---
    +VaccineType(code, desc)
}

' Dependências
CreateVaccineTypeView ..> CreateVaccineTypeController
CreateVaccineTypeController ..> DGSAdministrator

' Associação "1 knows 0..*"
DGSAdministrator "1" -> "0..*" VaccineType: specifies >

@enduml